--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -26,7 +26,9 @@
 
 .task-title {
     text-align: left;
-    font-weight: 500;
+    font-weight: bold;
+    font-size: 15px;
+    opacity: 0.7;
     margin-right: 10%;
     overflow: hidden;
     display: -webkit-box;
