--- a/src/components/KanbanBoard.css
+++ b/src/components/KanbanBoard.css
@@ -38,7 +38,7 @@
     border-radius: 7px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     z-index: 1;
-    width: 25%;
+    width: 300px;
 }
 
 .filter-popup button {
